[metadata]
name = abletonparsing
version = 0.1.2
author = David Braun
author_email = braun@ccrma.stanford.edu
description = Python module for parsing Ableton Live ASD clip files containing warp markers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DBraun/AbletonParsing
project_urls =
    Bug Tracker = https://github.com/DBraun/AbletonParsing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
tests_require = pytest; librosa; soundfile; pyrubberband

[options.packages.find]
where = src